# QtMcp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  child-process-injection-spec.md  mcp-diagram.html  package-lock.json  qtmcp-compatibility-modes.md  qtmcp-specification.md  vcpkg.json
.ci/patches/5.15.1/: 001-fix-gcc11-missing-limits.patch  README.md
.claude/skills/notarize/: SKILL.md
.claude/skills/test-mcp-modes/: SKILL.md
.github/actions/build-qt/: action.yml
.github/workflows/: ci-patched-qt.yml  ci.yml  publish-pypi.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: flaky-console-tests.md  patched-qt-gcc-compat.md  probe-qjsondocument.md  qt5-variant-json-test.md  symbolic-name-resolve-fail.md  variant-json-compat.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-introspection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-native-mode/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION-v2.md  03-VERIFICATION.md
.planning/phases/04-computer-use-mode/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-chrome-mode/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION-backup.md  05-VERIFICATION-new.md
.planning/phases/06-extended-introspection/: 06-01-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES-DISTRIBUTION.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
_specs/: IMPLEMENTATION_PLAN.md
cmake/: QtMCPConfig.cmake.in  qtmcp_inject_probe.cmake
docs/: BUILDING.md  GETTING-STARTED.md  MACOS.md  TROUBLESHOOTING.md  qtPilot_in_hog.md  qtpilot-tree-model-support-spec.md
ports/qtmcp/: portfile.cmake  usage  vcpkg.json
ports/qtmcp-bin/: QtMCPConfig.cmake  portfile.cmake  usage  vcpkg.json
python/: README.md  pyproject.toml
python/src/qtmcp/: __init__.py  __main__.py  cli.py  connection.py  discovery.py  download.py  event_recorder.py  logging_middleware.py  server.py  status.py
python/src/qtmcp/tools/: chrome.py  cu.py  discovery_tools.py  lifecycle_tools.py  logging_tools.py  native.py  recording_tools.py
python/src/qtpilot/: connection.py  download.py  event_recorder.py  message_logger.py  server.py
python/src/qtpilot/tools/: discovery_tools.py  logging_tools.py  native.py  recording_tools.py
python/tests/: conftest.py  test_connection.py  test_connection_multi_handler.py  test_connection_notification_queue.py  test_download.py  test_event_recorder.py  test_logging_middleware.py  test_logging_tools.py  test_message_logger.py  test_mode_switching.py  test_qt_env.py  test_recording_tools.py  test_tools.py
scripts/: qt-ctest.sh  qt-test.sh
src/compat/: compat_core.h  compat_gui.h  compat_variant.h
src/launcher/: CMakeLists.txt  elevation_windows.cpp  injector.h  injector_linux.cpp  injector_macos.cpp  injector_windows.cpp  main.cpp  qt_env_setup.cpp  qt_env_setup.h
src/probe/: CMakeLists.txt
src/probe/accessibility/: accessibility_tree_walker.cpp  accessibility_tree_walker.h  console_message_capture.cpp  console_message_capture.h  role_mapper.cpp  role_mapper.h
src/probe/api/: chrome_mode_api.cpp  chrome_mode_api.h  computer_use_mode_api.cpp  computer_use_mode_api.h  error_codes.h  native_mode_api.cpp  native_mode_api.h  response_envelope.cpp  response_envelope.h  symbolic_name_map.cpp  symbolic_name_map.h
src/probe/core/: child_injector_windows.cpp  child_injector_windows.h  injector.h  injector_linux.cpp  injector_windows.cpp  object_registry.cpp  object_registry.h  object_resolver.cpp  object_resolver.h  probe.cpp  probe.h  probe_init_linux.cpp  probe_init_macos.cpp  probe_init_windows.cpp
src/probe/interaction/: hit_test.cpp  hit_test.h  input_simulator.cpp  input_simulator.h  key_name_mapper.cpp  key_name_mapper.h  screenshot.cpp  screenshot.h
src/probe/introspection/: event_capture.cpp  event_capture.h  meta_inspector.cpp  meta_inspector.h  model_navigator.cpp  model_navigator.h  object_id.cpp  object_id.h  qml_inspector.cpp  qml_inspector.h  signal_monitor.cpp  signal_monitor.h  variant_json.cpp  variant_json.h
src/probe/transport/: discovery_broadcaster.cpp  discovery_broadcaster.h  jsonrpc_handler.cpp  jsonrpc_handler.h  notification_queue.cpp  notification_queue.h  websocket_server.cpp  websocket_server.h
src/shared/: CMakeLists.txt  process_inject_windows.cpp  process_inject_windows.h
test_app/: CMakeLists.txt  childwindow.cpp  childwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  test_admin_injection.cpp  test_chrome_mode_api.cpp  test_ci_rebuild.py  test_computer_use_api.cpp  test_event_capture.cpp  test_jsonrpc.cpp  test_jsonrpc_introspection.cpp  test_key_name_mapper.cpp  test_meta_inspector.cpp  test_model_navigator.cpp  test_native_mode_api.cpp  test_notification_queue.cpp  test_object_id.cpp  test_object_registry.cpp  test_signal_monitor.cpp  test_ui_interaction.cpp
(+59 files in other folders)
